--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,9 +26,13 @@
 -->
 
 <header>
-    <img src="me.png" alt="Miguel Rivas Picture" class="profile-img">
+    <a href="#popup"> <img src="me.png" alt="Miguel Rivas Picture" class="profile-img"> </a>
+    <div id="popup" class="popup">
+        <a href="#" class="close">&times;</a>
+        <img src="me.png" alt="Miguel Rivas Headshot" class="popup-img"></div>
+    
     <h1>Miguel A. Rivas</h1>
-    <p>It Specialist | Network Technician | Veteran</p>
+    <p>IT Specialist | Network Technician | Veteran</p>
 </header>
 
 <main>
@@ -53,8 +57,21 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: miguel.rivas13@outlook.com</p>
-        <p>Phone: (862) 238-3063</p>
+        <form action="https://formspree.io/f/myzwvdyb" method="POST" class="contact-form">
+            <input type="hidden" name="_next" value="thank-you.html">
+
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="_replyto" required>
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Send Message</button>
+
+        </form>
     </section>
 
     <section id="projects">
