Updated navbar with hamburger menu and animations

--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miguel A. Rivas |  IT Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <!-- AOS Library (Animate On Scroll) -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
 </head>
 
 <body>
 
 <nav>
+    <div class="hamburger" id="hamburger">
+        <i class="fas fa-bars"></i>
+    </div>
+
     <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact"> Contact</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#attachment">Attachments</a></li>
-        <li><a href="#military">Military</a></li>
+        <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
+        <li><a href="#skills"><i class="fas fa-cogs"></i>Skills</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+        <li><a href="#projects"><i class="fas fa-folder-open"></i>Projects</a></li>
+        <li><a href="#attachment"><i class="fas fa-paperclip"></i>Attachments</a></li>
+        <li><a href="#military"><i class="fas fa-medal"></i>Military</a></li>
     </ul>
 </nav>
 <!-- <a> is an anchor tag, a link
@@ -36,12 +47,12 @@
 </header>
 
 <main>
-    <section id="about">
+    <section id="about" class="section-light" data-aos="fade-up">
         <h2>About Me</h2>
         <p>I am an Army Veteran and IT professional with hands-on experience in networking, system admin, and troubleshooting</p>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="section-dark" data-aos="zoom-in">
         <h2>Skills</h2>
         <div class="skills-grid">
             <div class="skill-card">Powershell</div>
@@ -55,7 +66,7 @@
         </div>                     
     </section>
 
-    <section id="contact">
+    <section id="contact" class="section-light" data-aos="fade-up">
         <h2>Contact</h2>
         <form action="https://formspree.io/f/myzwvdyb" method="POST" class="contact-form">
             <input type="hidden" name="_next" value="thank-you.html">
@@ -74,56 +85,94 @@
         </form>
     </section>
 
-    <section id="projects">
-        <h2> Projects</h2>
+    <section id="projects" class="section-dark" data-aos="fade-right">
+        <h2><i class="fas fa-folder-open"></i> Projects</h2>
+
+
         <div class="project">
             <h3>Personal Portfolio Website</h3>
             <p>Built a responsive personal website using HTML and CSS to showcase my skills and background</p>
+            <div class="project-info">
+                <p><strong>Tech used:</strong> HTML, CSS, Githuh Pages</p>
+                <a href="https://rivas1312.github.io/my-portfolio/" class="btn" target="_blank">View Site</a>
+            </div>
         </div>
 
-        <div class="project">
-            <h3><a href="https://github.com/Rivas1312/my-portfolio" target="_blank">Army Network Simulation</a></h3>
-            <p>Created a simulated network environment using virutal machines to replicate military communication systems</p>
+        <div class="project-card">
+            <h3>System Admin VMware Lab</h3>
+            <p>Designed and deployed a virtual environment to simulate real-world system administration task, including domain setup, user managment, and networking configuration.</p>
+            <div class="project-info">
+                <p><strong>Tech used:</strong> VMware, Windows Server 2022, Active Directory, PowerShell</p>
+                <a href="https://github.com/Rivas1312/System-admin-lab" class="btn" target="_blank">View on Github</a>
+            </div>
         </div>       
     </section> 
 
-    <section id="attachment">
+    <section id="attachment" class="section-light" data-aos="zoom-in-up">
         <h2>Attachments</h2>
         <p> Attached are pdfs of my projects, codes and resume. </p>
         <a href="Miguel Rivas Resume (1).pdf" download class="btn">Download Resume</a>
     </section>
     
-    <section id="military">
-        <h2>Military Experience</h2>
-            <h3>Time in Service</h3>
-                <p> Service time: Jan 2019 - Current </p>
-            <h3>Type of Service</h3>
-                <p>Army Active duty: 5 1/2 years <br>Army Reserves: Current<br></p>
-            <h3>Stations</h3>
-                <p>Stations: Ft Jackson, Ft Gordon, Ft Benning, Ft Bliss, Camp Hovey, Ft Dix</p>
-            <h3>Rank</h3> 
-                <p>E-5/SGT since Janurary 2022</p> 
-            <h3>Awards</h3> 
-                <p>Army Commendation Medal<br> 
-                    <br>Army Achievement Medal (2x)<br>
-                    <br>Army Good Conduct Medal (2x)<br>
-                    <br>National Defense Service<br>
-                    <br>Global War on Terrorism<br> 
-                    <br>Korea Defense Service Medal<br>
-                    <br>Army NCO professional<br>
-                    <br>Army Service<br> 
-                    <br>Army Oversease Service<br>
-                </p>
-        </p>
+    <section id="military" class="section-dark" data-aos="fade-up">
+        <h2><i class="fas fa-medal"></i> Military Experience</h2>
+        <div class="timeline">
+
+            <div class="timeline-item">
+                <div class="timeline-date">2019-2024</div>
+                <div class="timeline-content">
+                    <h3> Active Duty - U.S. Army</h3>
+                    <p>Served full-time across multiple stations including Korea, Texas and New Jersey. Promoted to Sergeant in 2022</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-date">2024 - Present</div>
+                <div class="timeline-content">
+                    <h3>Army Reserves</h3>
+                    <p> Currently serving as a reservist while pursuing education and IT career growth.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-date">Awards & Recognition</div>
+                <div class="timeline-content">
+                    <ul>
+                        <li>Army Commendation Medal</li>
+                        <li>Army Achievement Medal (2x)</li>
+                        <li>Army Good Conduct Medal (2x)</li>
+                        <li>Global War on Terrorism</li>
+                        <li>Korea Defense Service Medal</li>
+                        <li>NCO Professional Development</li>
+                        <li>Overseas Service Medal</li>
+                    </ul>
+                </div>
+            </div>
+        
+        </div>
     </section>
 <footer>
     <p>&copy; 2025 Miguel A. Rivas</p>
     <p>
-        <a href="https://github.com/Rivas1312" target="_blank">GitHub</a>|
-        <a href="https://linkedin.com/in/rivas1312" target="_blank">LinkedIn</a> |
-        <a href="mailto:miguel.rivas13@outlook.com">Email Me</a>
+        <a href="https://github.com/Rivas1312" target="_blank"><i class="fab fa-github"></i>GitHub</a>|
+        <a href="https://linkedin.com/in/rivas1312" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a> |
+        <a href="mailto:miguel.rivas13@outlook.com"><i class="fas fa-envelope"></i>Email Me</a>
     </p>
 </footer>
+
+<script>
+    AOS.init();
+</script>
+
+<script>
+    const hamburger = document.getElementById('hamburger');
+    const navMenu = document.getElementById('nav-menu');
+
+    hamburger.addEventListener('click', () => {
+        navMenu.classList.toggle('open');
+    });
+</script>
+
 
 </body>
 
