--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <i class="fas fa-bars"></i>
     </div>
 
-    <ul>
+    <ul id="nav-menu">
         <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
         <li><a href="#skills"><i class="fas fa-cogs"></i>Skills</a></li>
         <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
